# rust-wasm-typescript-lib

./: .gitignore  README.md  package-lock.json  package.json
rs/: Cargo.toml
rs/src/: lib.rs
rs/tests/: web.rs
src/: index.ts
src/rs/: lib.rs
ts/: package.json
ts/src/: index.spec.ts  index.ts
