[package]
name = "rsfoo"
version = "1.1.0"
authors = ["chuck <cdriesler.iv@gmail.com>"]
description = "Rust component of library template."
license = "MIT"
repository = "https://github.com/cdriesler/rust-wasm-typescript-lib"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.64"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"